- https://github.com/eclipse-syson/syson/issues/1411[#1411] [syson] Fix an issue where model and diagrams referencing standard libraries elements might not correctly saved.
- https://github.com/eclipse-syson/syson/issues/1407[#1407] [metamodel] Fix an issue where a `Feature` containing a `ChainingFeature` was not typed with the type of the last `ChainingFeature`.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1384[#1384] [metamodel] Align metamodel to SysMLv2 2025-04 specification released on April 2025(see https://www.omg.org/spec/SysML/ for more details) and KerML 2025-04 specification released on April 2024(see https://www.omg.org/spec/KerML/ for more details).

=== New features

- https://github.com/eclipse-syson/syson/issues/1396[#1396] [general-view] Add a graphical edge representation for `IncludeUseCaseUsage` in the  _General View_ diagram.

== v2025.6.0

=== Shapes

- Add support for `ViewUsages` and `ViewDefinitions`

=== Breaking changes

- Some APIs have changed, impacting downstream applications:

* `org.eclipse.syson.tree.explorer.view.services.api.ISysONDefaultExplorerService`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerFragment`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerService`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerServiceDelegate`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter